--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: cshapes
-Version: 0.2-9
-Date: 2011-05-03
+Version: 0.3-1
+Date: 2011-06-26
 Title: CShapes Dataset and Utilities
 Author: Nils B. Weidmann <nils.weidmann@gmail.com>, Doreen Kuse <doreen.kuse@gmail.com>, Kristian Skrede Gleditsch <ksg@essex.ac.uk>
 Maintainer: Nils B. Weidmann <nils.weidmann@gmail.com>, Kristian Skrede Gleditsch <ksg@essex.ac.uk>
 Depends: R (>= 2.8.0), sp, maptools, rJava
 SystemRequirements: Java (>= 1.5.0)
 LazyLoad: yes
-Description: Package for CShapes, a GIS dataset of country boundaries (1946-2008). Includes functions for data extraction and the computation of weights matrices.  
+Description: Package for CShapes, a GIS dataset of country boundaries (1946-2008). Includes functions for data extraction and the computation of distances matrices and -lists.  
 License: GPL (>= 2)
 
