--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: cshapes
-Version: 0.3-1
-Date: 2011-06-26
+Version: 0.4-1
+Date: 2012-01-07
 Title: CShapes Dataset and Utilities
-Author: Nils B. Weidmann <nils.weidmann@gmail.com>, Doreen Kuse <doreen.kuse@gmail.com>, Kristian Skrede Gleditsch <ksg@essex.ac.uk>
-Maintainer: Nils B. Weidmann <nils.weidmann@gmail.com>, Kristian Skrede Gleditsch <ksg@essex.ac.uk>
+Author: Nils B. Weidmann <nils.weidmann@uni-konstanz.de>, Kristian Skrede Gleditsch <ksg@essex.ac.uk>
+Maintainer: Nils B. Weidmann <nils.weidmann@uni-konstanz.de>
 Depends: R (>= 2.8.0), sp, maptools, rJava
 SystemRequirements: Java (>= 1.5.0)
 LazyLoad: yes
-Description: Package for CShapes, a GIS dataset of country boundaries (1946-2008). Includes functions for data extraction and the computation of distances matrices and -lists.  
+Description: Package for CShapes, a GIS dataset of country boundaries (1946-2012). Includes functions for data extraction and the computation of distances matrices and -lists.  
 License: GPL (>= 2)
 
