--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: cshapes
-Version: 0.4-2
-Date: 2013-05-05
+Version: 0.5-1
+Date: 2015-10-30
 Title: CShapes Dataset and Utilities
 Author: Nils B. Weidmann <nils.weidmann@uni-konstanz.de>, Kristian Skrede Gleditsch <ksg@essex.ac.uk>
 Maintainer: Nils B. Weidmann <nils.weidmann@uni-konstanz.de>
+URL: http://nils.weidmann.ws/projects/cshapes, https://r-forge.r-project.org/scm/viewvc.php/*checkout*/pkg/inst/shp/cshapes_shapefile_documentation.txt?root=cshapes
 Depends: R (>= 2.8.0), sp (>= 1.0-5), maptools (>= 0.8-21), plyr (>= 1.8)
 LazyLoad: yes
-Description: Package for CShapes, a GIS dataset of country boundaries (1946-2012). Includes functions for data extraction and the computation of distance matrices and -lists.  
+Description: Package for CShapes, a GIS dataset of country boundaries (1946-2015). Includes functions for data extraction and the computation of distance matrices and -lists.  
 License: GPL (>= 2)
 
